--- a/report/AI_report.tex
+++ b/report/AI_report.tex
@@ -109,6 +109,7 @@
 \newcommand{\gap}{\vspace{11pt}}
 \newcommand{\too}{\rightarrow}
 
+
 \DeclareMathOperator{\Ima}{Im}
 
 \begin{document}
@@ -121,9 +122,15 @@
 
 \textit{How have you formulated the game as a search problem? (You could discuss how you view the problem in terms of states, actions, goal tests, and path costs, for example.)}
 
+
+kduhfsdfhsduisdfhuajnsdsa
+blah blahkjkhsuhasdasd
+
 \section{Search Algorithm choice}
 
 \textit{What search algorithm does your program use to solve this problem, and why did you choose this algorithm? (You could comment on the algorithm’s efficiency, completeness, and optimality. You could explain any heuristics you may have developed to inform your search, including commenting on their admissibility.)}
+
+
 
 \section{Strains on Time and Space Complexity}
 
