set default value for state in movejumpchoices

--- a/report/AI_report.tex
+++ b/report/AI_report.tex
@@ -127,7 +127,9 @@
 
 \section{Strains on Time and Space Complexity}
 
-\textit{What features of the problem and your program’s input impact your program’s time and space requirements? (You might discuss the branching factor and depth of your search tree, and explain any other features of the input which affect the time and space complexity of your algorithm.)}
+\textit{What features of the problem and your program’s input impact your program’s time and space requirements? (You might discuss the branching factor and depth of your search treSe, and explain any other features of the input which affect the time and space complexity of your algorithm.)}
+
+
 
 
 \end{document}
