--- a/Shakespearean plan/Shakespearean-plan.tex
+++ b/Shakespearean plan/Shakespearean-plan.tex
@@ -28,6 +28,7 @@ The projecteth is due on the 21st of may - just ov'r 4 weeks hence.  Below lists
     \item 30/04 - Graph Theory (Billy)
     \item 03/05 - Software Modelling and Design (Billy and Luca)
     \item 10/05 - Algebra (Billy)
+    \item 10/05 - Imaging the Environment (Luca)
 \end{itemize}
 
 
