--- a/plan/plan.tex
+++ b/plan/plan.tex
@@ -12,16 +12,15 @@
 
 \begin{document}
 
-{\frakfamily\fraklines \lettrine[lines=2]{\yinipar{O}}{our} plan.
-We will regularly use Tuesday to meet up and work on our project for the full day. Throughout the week we will work on the individual tasks we have designated for both of us.
+\lettrine[lines=2]{\yinipar{W}}e will regularly use Tuesday to meet up and work on our project for the full day. Throughout the week we will work on the individual tasks we have designated for both of us.\\
 
-We will discuss our approach to the abstract problems and decide on strategies together, after which there are typically several distinct areas for implementation that we can divide between us for the weekly workload. We can then marry these implementations together on the following Tuesday of each week.
+Each Tueday we can discuss our approach to the abstract problems and decide on strategies together, after which there are typically several distinct areas for implementation that we can divide between us for the weekly workload. We can then marry these implementations together on the following Tuesday of each week.\\
 
-Regarding our approach to the project, we will proceed by creating this simplest possible Chexers-playing-AI that works, and then iteratively extend this, piece-by-piece, rather than going for the smartest possible AI straight away.
+Regarding our approach to the project, we will proceed by creating this simplest possible Chexers-playing-AI that works, and then iteratively extend this, piece-by-piece, rather than going for the smartest possible AI straight away.\\
 
-At the bare minimum, we will begin by implementing a simple minimax algorithm, using a simple evaluation function. After each iteration, we will play against it to figure out it's most obvious weaknesses, and try to improve our evaluation function to a reasonable extent.
+At the bare minimum, we will begin by implementing a simple minimax algorithm, using a simple evaluation function. After each iteration, we will play against it to figure out it's most obvious weaknesses, and try to improve our evaluation function to a reasonable extent.\\
 
-Once we have exhausted these simple improvements, we will explore more sophisticated improvements, such as machine learning (again beginning simply, and iteratively adding sophistication).
+Once we have exhausted these simple improvements, we will explore more sophisticated improvements, such as machine learning (again beginning simply, and iteratively adding sophistication). When we reach the peak of programmatic complexity that we are comfortable with, we might also try injecting some behaviour from our own personal strategies.\\
 
 The project is due on the 21st of May - just over 4 weeks away. Below lists deadlines for our other subjects.
 \begin{itemize}
@@ -32,6 +31,5 @@ The project is due on the 21st of May - just over 4 weeks away. Below lists dead
 
 
 
-}
 
 \end{document}
