--- a/plan/plan.tex
+++ b/plan/plan.tex
@@ -27,7 +27,12 @@ The project is due on the 21st of May - just over 4 weeks away. Below lists dead
     \item 30/04 - Graph Theory (Billy)
     \item 03/05 - Software Modelling and Design (Billy and Luca)
     \item 10/05 - Algebra (Billy)
+    \item 10/05 - Imaging The Environment (Luca)
 \end{itemize}
+
+Ideally we develop a solid foundation in the next couple weeks, before early May distracts us with other subjects, and after the 10th of May we can maximise our attention to this project.
+
+\null\hfill William Price \&\& Luca Kennedy (Kanye's Fingers).
 
 
 
